2009-11-23  Bernhard Kraft  <kraftb@think-open.at>

	* Implemented feature: Field type "Dropdown" implementing the select box field type

2009-11-08  Bernhard Kraft  <kraftb@think-open.at>

	* Implemented feature: Field type "Tab" to allow separation of fields into tabs of alt_doc

2009-11-05  Bernhard Kraft  <kraftb@think-open.at>

	* Implemented feature: Field type "RTE"
	* Fixed typo: Every field type localang.xml had the word "property" misspelled	
	* Added feature: It is now possible, to define a "where" part for database relations, so only items on the current page can be selected
	* Fixed Bug: Sorting of fields in created record did not respect sorting in table record field list
	* Fixed Bug: Installation order of kb_config and kb_kickstarter does now not matter anymore
	  Before kb_kickstarter had to be installed before kb_config

2009-08-27  Bernhard Kraft  <kraftb@think-open.at>

	* Created this file
	* Fixed Bug #4144: Bad error message on undefined fieldtype
